--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -17,7 +17,14 @@
    <div class="row">
      <div class="profil-title text-left">
       <p>プロフィール</p>
+      <%= link_to "ユーザー登録", new_mypage_path, {class: "toroku-text" } %>
       
+      <p class="user-name">
+       ユーザー名：<%= current_user.name %>
+      </p>
+      
+      <p class="mypage-text"><%= mypage.description %></p>
+    
      </div>
    </div>
  </div>
