--- a/app/views/mypages/new.html.erb
+++ b/app/views/mypages/new.html.erb
@@ -3,14 +3,15 @@
     <div class="row">
         <h1 class="form-title text-center">プロフィール登録画面</h1>
       　<div class="col-md-5 col-md-offset-2">
-      　  <%= form_for @profil do |f| %>
+      　  <%= form_for @mypage do |f| %>
       　   <div class="form-group">
       　    <%= f.label :image %>
       　    <%= f.file_field :image %>
       　   </div>
+      　   
           <div class="form-group">
             <%= f.label :description %>
-            <%= f.text_area :description %>
+            <%= f.text_area :description, class: 'form-control' %>
           </div>
           
           <%= f.submit "設定", class: 'btn-white' %>
