--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -73,12 +73,10 @@
 
 
 .middle-hero-wrapper {
-  width: 100vw;
-  height: 700px;
   //background-image: url('top1.jpg')
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto 100%;
   background-color:#fdf5e6 ;
   background-attachment: fixed;
 }
@@ -100,18 +98,15 @@
 
 
 .under-hero-wrapper {
-  width: 100vw;
-  height: 350px;
   //background-image: url('top1.jpg')
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto 100% ;
   background-color: #fff0f5;
   background-attachment: fixed;
   img{
     height: 230px;
     width: 380px;
-    margin-left: 700px;
   }
 }
 
@@ -149,7 +144,7 @@
 }
 
 .under-content{
-  margin-top: 60px;
+  margin-top: 2s0px;
 }
 
 .top-content{
@@ -215,4 +210,95 @@
   padding-top: 10px;
   width: 400px;
   height: 80vh;
+  
+  .user-image {
+  width: 100%;
+  height: 100%;
+  margin-left: -15px;
+  margin-bottom: 10px;
+  border-radius: 20%;
+  display: block;
+  background-position: top center;
+  background-size: cover;
+  }
+}
+
+.user-image-form{
+  margin-top: 30px;
+}
+
+.toroku-text {
+  font-size: 15px;
+  margin-left: 10px;
+  border: solid 1px #4b0082;
+  padding: 5px 5px;
+  margin-bottom: 10px;
+  color: #4b0082;
+}
+
+.user-form-text {
+  font-size: 25px;
+  margin: 5px 0px;
+  font-family: arial unicode ms;
+  color: #696969;
+}
+
+.mypage-profil-content {
+  width: 100vw;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #faf0e6;
+  background-attachment: fixed;
+}
+
+.user-title {
+  font-size: 30px;
+  font-family: Hiragino Kaku Gothic Pro;
+  color: #696969;
+  border: bold;
+}
+
+.user-form-text{
+  margin-bottom: -8px;
+}
+
+.user-name-in{
+  margin-left: 20px;
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-family: 游ゴシック;
+}
+
+.user-description-in {
+  margin-left: 20px;
+  font-size: 30px;  
+}
+
+
+.back{
+  background-color: #efefef;
+}
+
+.menu-content {
+  margin-top: 100px;
+  height: 300px;
+  width: 200px;
+  background-color: #fffafa;
+  line-height: 30px; 
+  padding-top: 30px;
+}
+
+.side-menu{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 10px;
+}
+
+.slideshow{
+  margin-top: 100px;
+  width: 500px;
+  height: 300px;
+  background-color: #fff;
 }
