--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
    <div class="navigation">
      <% if logged_in? %>
      <%= link_to "TOPに戻る" , root_path ,{class: "navigation-button"} %>
-     <%= link_to "マイページへ" , mypages_path ,{ class: "navigation-button-2"} %>
+     <%= link_to "マイページへ" , mypage_path(current_user.id) ,{ class: "navigation-button-2"} %>
      <% else %>
      <%= link_to "登録はこちら" , new_user_path ,{class: "navigation-button"} %>
      <%= link_to "ログイン" , login_path ,{ class: "navigation-button-2"} %>
@@ -30,17 +30,11 @@
     <div class="row top-content">
        <div class="col-md-3 tiiki-content">
         <div class="middle-content">
-         <%= p "東北地方" %>
+         <%= p "北海道地方" %>
         </div>
         <div class="tiiki-text">
          </br>
-         <%= link_to "青森県", root_path %>
-         </br>
-         <%= link_to "青森県", root_path %>
-         </br>
-         <%= link_to "青森県", root_path %>
-         </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "北海道", root_path %>
         </div>
        </div>
        
@@ -52,43 +46,63 @@
          </br>
          <%= link_to "青森県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "岩手県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "宮城県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "秋田県", root_path %>
+         </br>
+         <%= link_to "山形県", root_path %>
+         </br>
+         <%= link_to "福島県", root_path %>
         </div>
        </div>
        
        <div class="col-md-3 tiiki-content">
         <div class="middle-content">
-         <%= p "東北地方" %>
+         <%= p "関東地方" %>
         </div>
         <div class="tiiki-text">
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "東京都", spots_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "千葉県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "神奈川県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "茨城県", root_path %>
+         </br>
+         <%= link_to "群馬県", root_path %>
+         </br>
+         <%= link_to "埼玉県", root_path %>
+         </br>
+         <%= link_to "栃木県", root_path %>
         </div>
        </div>
        
        <div class="col-md-3 tiiki-content">
         <div class="middle-content">
-         <%= p "東北地方" %>
+         <%= p "中部地方" %>
         </div>
         <div class="tiiki-text">
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "新潟県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "富山県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "石川県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "福井県", root_path %>
+         </br>
+         <%= link_to "長野県", root_path %>
+         </br>
+         <%= link_to "山梨県", root_path %>
+         </br>
+         <%= link_to "静岡県", root_path %>
+         </br>
+         <%= link_to "岐阜県", root_path %>
+         </br>
+         <%= link_to "愛知県", root_path %>
         </div>
        </div>
     </div>
@@ -96,65 +110,79 @@
     <div class="row under-content">
        <div class="col-md-3 tiiki-content">
         <div class="middle-content">
-         <%= p "東北地方" %>
+         <%= p "関西地方" %>
         </div>
         <div class="tiiki-text">
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "大阪府", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "京都府", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "奈良県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "滋賀県", root_path %>
+         </br>
+         <%= link_to "兵庫県", root_path %>
+         </br>
+         <%= link_to "和歌山県", root_path %>
+         </br>
+         <%= link_to "三重県", root_path %>
         </div>
        </div>
        
        <div class="col-md-3 tiiki-content">
         <div class="middle-content">
-         <%= p "東北地方" %>
+         <%= p "中国地方" %>
         </div>
         <div class="tiiki-text">
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "鳥取県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "岡山県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "山口県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "広島県", root_path %>
+         </br>
+         <%= link_to "島根県", root_path %>
         </div>
        </div>
        
        <div class="col-md-3 tiiki-content">
         <div class="middle-content">
-         <%= p "東北地方" %>
+         <%= p "四国地方" %>
         </div>
         <div class="tiiki-text">
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "香川県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "徳島県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "愛媛県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "高知県", root_path %>
         </div>
        </div>
        
        <div class="col-md-3 tiiki-content">
         <div class="middle-content">
-         <%= p "東北地方" %>
+         <%= p "九州・沖縄地方" %>
         </div>
         <div class="tiiki-text">
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "福岡県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "長崎県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "熊本県", root_path %>
          </br>
-         <%= link_to "青森県", root_path %>
+         <%= link_to "佐賀県", root_path %>
+         </br>
+         <%= link_to "宮崎県", root_path %>
+         </br>
+         <%= link_to "鹿児島県", root_path %>
+         </br>
+         <%= link_to "沖縄県", root_path %>
         </div>
        </div>
     </div>
@@ -165,6 +193,8 @@
 <div class="under-hero-wrapper text-center">
    <div class="container under-hero-container">
      <p class="under-text">Pictgram</p>
-     <%= link_to image_tag('icons/pict.png'),'https://serene-refuge-44069.herokuapp.com/', class: 'pictgram' %>
+     <div class="col-md-offset-8 pictgram">
+     <%= link_to image_tag('icons/pict.png'),'https://serene-refuge-44069.herokuapp.com/' %>
+     </div>
    </div>
 </div>
