--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -16,24 +16,6 @@
   </div>
 </div>
 
-<div class="tokyo-index-wrapper">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-offset-4 col-md-6 slideshow">
-        <%= link_to "スカイツリー", spot_path %>
-      </div>
-      
-      <div class="col-md-offset-4 col-md-6 slideshow">
-        <p>test</p>
-      </div>
-      
-      <div class="col-md-offset-4 col-md-6 slideshow">
-        <p>test</p>
-      </div>
-    </div>
-  </div>
-</div>
-
 <div class="side-menu">
   <div class="container">
     <div class="col-md-2 menu-content text-center">
@@ -55,6 +37,21 @@
     </div>
   </div>
 </div>
+
+<div class="tokyo-index-wrapper">
+  <div class="container">
+    <div class="row">
+     <% @spots.each do |spot| %>
+       <div class="col-md-offset-4 col-md-6 slideshow">
+         <%= link_to spot_path(id: spot.id), method: :post do %>
+           <%= spot.spot_name %>
+         <% end %>
+       </div>
+     <% end %>
+    </div>
+  </div>
+</div>
+
 
 
 
