--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -12,6 +12,10 @@
        <%= f.label :description, class: 'text-while' %>
        <%= f.text_field :description, class: 'form-control' %>
       </div>
+      <div class="form-group">
+       <%= f.label :image, class: 'text-while' %>
+       <%= f.file_field :image, class: 'form-control' %>
+      </div>
       
       <%= f.submit "登録", class: 'btn-white' %>
       <% end %>
