--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -204,27 +204,28 @@
 .profil-title{
   font-size: 30px;
   font-family: HiraMinPro-W6;
-  margin-top: 130px;
-  border: solid;
+  margin-top: 120px;
+  background-color: #fff;
   padding-top: 10px;
-  width: 400px;
+  width: 450px;
   height: 80vh;
   
   .user-image {
-  width: 100%;
-  height: 100%;
+  width: 400px;
+  height: 200px;
   margin-left: -15px;
   margin-bottom: 10px;
   border-radius: 20%;
   display: block;
   background-position: top center;
   background-size: cover;
+  padding-left: 10px;
   }
 }
 
 .user-image-form{
   padding-left: 20px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .toroku-text {
@@ -266,7 +267,7 @@
 
 .user-name-in{
   margin-left: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   margin-top: 10px;
   font-size: 25px;
   font-family: 游ゴシック;
@@ -283,8 +284,16 @@
   background-color: #efefef;
 }
 
-.menu-content {
+
+.tokyo-index-wrapper{
+  display: inline-block;
   margin-top: 120px;
+  margin-left: 200px;
+}
+
+
+.menu-content {
+  margin-left: 80px;
   height: 300px;
   width: 200px;
   background-color: #fffafa;
@@ -296,16 +305,23 @@
   position: -webkit-sticky;
   position: sticky;
   top: 10px;
+  display: inline-block;
+}
+
+.page-content{
+  height: 100vh;
+  width: 100vw;
 }
 
 
 .slideshow{
-  margin-top: -290px;
-  margin-bottom: 300px;
+  margin-bottom: 20px;
   width: 500px;
   height: 300px;
   background-color: #fff;
 }
+
+
 
 
 .user-image-spot{
@@ -359,41 +375,125 @@
   font-size: 14px;
 }
 
-.favorite-content{
-  height: 900px;
-  width: 500px;
-  background-color: #fff;
-  margin-top: -590px;
+.favorite-text{
+  font-size: 20px;
+  font-family:游ゴシック;
+  margin-top: 120px;
+  color: #696969;
 }
 
+.favorite-clear-all{
+  background-color: #efefef;
+  height: 120vh;
+  width: 120vw;
+}
+
+.favorite-spot-index{
+  display: inline-block;
+}
+
+.favorite{
+  width: 600px;
+  height: 600px;
+  margin-left: 100px;
+  margin-top: -20px;
+  background-color: #f5f5f5;
+  overflow: auto;
+}
+
+.clear{
+  width: 600px;
+  height: 600px;
+  margin-left: 80px;
+  background-color: #f5f5f5;
+  overflow: auto;
+}
+
+
+.clear-spot-index{
+  display: inline-block;
+}
+
+
+.favorite-content{
+  width: 500px;
+  height: 330px;
+  margin-top: 30px;
+  margin-left: 50px;
+  background-color: #fff;
+}
+
+.clear-content{
+  width: 500px;
+  height: 330px;
+  background-color: #fff;
+  margin-left: 50px;
+  margin-top: 30px;
+}
 
 .favorite-image-spot{
-  margin-left: 90px;
-  padding-top: 20px;
-  padding-left: 10px;
-  width: 250px;
-  height: 170px;
+  width: 300px;
+  height: 180px;
+  margin-left: 95px;
 }
 
-.favorite-spot-name{
-  padding-left: 5px;
-  margin-top: 20px;
+.clear-image-spot{
+  width: 300px;
+  height: 180px;
+  margin-left: 95px;
 }
 
 .favorite-spot-text{
-  width: 450px;
-  border-bottom: solid 2px #b20000;
-  font-size: 10px;
+  margin-left: 95px;
+  font-size: 12px;
+  margin-top: 7px;
 }
 
-.favorite-spot-description-title{
-  margin-top: 10px;
-  font-size: 10px;
+.clear-spot-text{
+  margin-left: 95px;
+  font-size: 12px;
+  margin-top: 7px;
 }
 
 .favorite-spot-description{
-  padding-left: 10px;
-  width: 450px;
-  font-size: 10px;
-  margin-bottom: 30px;
+  margin-left: 95px;  
+  width: 300px;
+  font-size: 12px;
+}
+
+.clear-spot-description{
+  margin-left: 95px;  
+  width: 300px;
+  font-size: 12px;
+}
+
+.favorite-spot-description-title{
+  margin-bottom: -1px;
+}
+
+.clear-description-title{
+  margin-bottom: -1px;
+}
+
+.favorite-title{
+  font-size: 20px;
+  font-family: 游ゴシック;
+  margin-left: 330px;
+  margin-top: 120px;
+  border: solid 3px #808080;
+  width: 150px;
+  height: 50px;
+  padding-left: 22px;
+  padding-top: 6px;
+}
+
+.clear-title{
+  font-size: 20px;
+  font-family: 游ゴシック;
+  margin-left: 300px;
+  border: solid 3px #808080;
+  width: 150px;
+  height: 50px;
+  padding-left: 30px;
+  padding-top: 6px;
 }
