--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,20 @@
   </head>
   <body>
     
+<div class="navbar navbar-default navbar-fixed-top navbar-transparent">
+ <div class="pull-right">
+   <div class="navigation">
+     <% if logged_in? %>
+     <%= link_to "TOPに戻る" , root_path ,{class: "navigation-button"} %>
+     <%= link_to "マイページへ" , mypage_path(current_user.id) ,{ class: "navigation-button-2"} %>
+     <% else %>
+     <%= link_to "登録はこちら" , new_user_path ,{class: "navigation-button"} %>
+     <%= link_to "ログイン" , login_path ,{ class: "navigation-button-2"} %>
+     <% end %>
+   </div>
+  </div>
+</div>
+    
 <% flash.each do |key, value| %>
   <div class="alert alert-<%= key %>" role="alert"><%= value %></div>
 <% end %>
