--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -1,21 +1,9 @@
-<div class="navbar navbar-default navbar-fixed-top navbar-transparent">
- <div class="pull-right">
-   <div class="navigation">
-     <% if logged_in? %>
-     <%= link_to "TOPに戻る" , root_path ,{class: "navigation-button"} %>
-     <%= link_to "ログアウト", logout_path , class: "navigation-button-2", method: :delete %>
-     <% else %>
-     <%= link_to "登録はこちら" , new_user_path ,{class: "navigation-button"} %>
-     <%= link_to "ログイン" , login_path ,{ class: "navigation-button-2"} %>
-     <% end %>
-   </div>
-  </div>
-</div>
+
 
 <div class="mypage-profil-content">
    <div class="container">
      <div class="row">
-     <div class="col-md-2 profil-title text-left">
+     <div class="col-md-offset-4 col-md-4 profil-title text-left">
       <p class= "user-title">プロフィール
       <%= link_to "ユーザー情報編集", edit_mypage_path(current_user.id) , {class: "toroku-text" } %>
       </p>
@@ -38,35 +26,19 @@
       <div class= "user-description-form">
       <p class="user-form-text">目標</p>
       <div class="user-description-in">
-      <% if @mypage.description? %>
-      <%= @mypage.description %>
-      <% else %>
-      <%= ここに目標が入ります %>
-      <% end %>
-      
+       <% if @mypage.description? %>
+       <%= @mypage.description %>
+       <% else %>
+       <%= ここに目標が入ります %>
+       <% end %>
      </div>
      </div>
+     
+     <%= link_to favorites_index_path do %>
+     <p class="favorite-text text-center">お気に入りと達成済み一覧表示</p>
+     <% end %>
    </div>
 </div>
 
-<div class="favorite-spot-index">
- <div class="container">
-  <div class="row">
-   <% @favorite_spots.each do |spot| %>
-    <div class="col-md-offset-6 col-md-5 favorite-content">
-      <%= image_tag spot.image.url, class:"favorite-image-spot" %>
-        <div class="favorite-spot-name">
-          <p class="favorite-spot-text">
-           <%= spot.spot_name %>
-          </p>
-        </div>
-        <div class="favorite-spot-description">
-         <p class="favorite-spot-description-title">詳細</p>
-          <%= spot.description %>
-        </div>
-    </div>
-   <% end %>
-  </div>
- </div>
-</div>
+
 
