--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,19 +1,5 @@
 <div class="spot-back">
 
-<div class="navbar navbar-default navbar-fixed-top navbar-transparent">
- <div class="pull-right">
-   <div class="navigation">
-     <% if logged_in? %>
-     <%= link_to "TOPに戻る" , root_path ,{class: "navigation-button"} %>
-     <%= link_to "マイページへ" , mypage_path(current_user.id) ,{ class: "navigation-button-2"} %>
-     <% else %>
-     <%= link_to "登録はこちら" , new_user_path ,{class: "navigation-button"} %>
-     <%= link_to "ログイン" , login_path ,{ class: "navigation-button-2"} %>
-     <% end %>
-   </div>
-  </div>
-</div>
-
 <div class="spot-show-wrapper">
   <div class="container">
      <div class="row">
@@ -36,6 +22,17 @@
            <% else %>
            <%= link_to favorites_path(spot_id: @spot.id), method: :delete do %>
            <p class="favorite-spot text-center">お気に入り解除</p>
+            <% end %>
+          <% end %>
+          
+           <% if !@spot.clear_users.include?(current_user) %>
+           <%= link_to clears_path(spot_id: @spot.id), method: :post do %>
+            <p class="favorite-spot text-center">達成済みに登録</p>
+           <% end %>
+           
+           <% else %>
+           <%= link_to clears_path(spot_id: @spot.id), method: :delete do %>
+           <p class="favorite-spot text-center">達成済みを解除</p>
             <% end %>
           <% end %>
        </div>
