--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,25 +4,30 @@
       <h1 class="user-h1-text text-center">登録画面</h1>
       <div class="col-md-offset-4 col-md-4 col-md-offset-4 form-user">
       <%= form_for @user do |f| %>
-      <div class="form-group">
-       <%= f.label :email, class: 'text-while ' %>
-       <%= f.text_field :email, class: 'form-control' %>
-      </div>
-       <div class="form-group">
-       <%= f.label :name, class: 'text-while' %>
-       <%= f.text_field :name, class: 'form-control' %>
-      </div>
-       <div class="form-group">
-       <%= f.label :password, class: 'text-while' %>
-       <%= f.text_field :password, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-       <%= f.label :password_confirmation, class: 'text-while' %>
-       <%= f.text_field :password_confirmation, class: 'form-control' %>
-      </div>
+        <div class="form-group">
+         <%= f.label :email, class: 'text-while ' %>
+         <%= f.text_field :email, class: 'form-control' %>
+        </div>
+         <div class="form-group">
+         <%= f.label :name, class: 'text-while' %>
+         <%= f.text_field :name, class: 'form-control' %>
+        </div>
+         <div class="form-group">
+         <%= f.label :password, class: 'text-while' %>
+         <%= f.password_field :password, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+         <%= f.label :password_confirmation, class: 'text-while' %>
+         <%= f.password_field :password_confirmation, class: 'form-control' %>
+        </div>
+
+        <%= f.fields_for :mypage, @user.mypage do |pf| %>
+        <% end %>
+
       
-      <%= f.submit "登録", class: 'btn-white' %>
+        <%= f.submit "登録", class: 'btn-white' %>
       <% end %>
+      
       <div class="login-text">
       <%= p "(注)登録成功時は自動でTOPに戻ります" %>
       </div>
