--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -399,6 +399,7 @@
   margin-top: -20px;
   background-color: #f5f5f5;
   overflow: auto;
+  display: inline-block;
 }
 
 .clear{
@@ -407,6 +408,7 @@
   margin-left: 80px;
   background-color: #f5f5f5;
   overflow: auto;
+  display: inline-block;
 }
 
 
@@ -496,4 +498,5 @@
   height: 50px;
   padding-left: 30px;
   padding-top: 6px;
+  margin-top: -60px;
 }
