--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
    <div class="navigation">
      <% if logged_in? %>
      <%= link_to "TOPに戻る" , root_path ,{class: "navigation-button"} %>
-     <%= link_to "マイページへ" , mypage_path(current_user.id) ,{ class: "navigation-button-2"} %>
+     <%= link_to "マイページへ" , user_path(current_user.id) ,{ class: "navigation-button-2"} %>
      <div class="navigation-button-2">
      <%= link_to "ログアウト" , logout_path(current_user.id) ,method: :delete %>
      </div>
