--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,8 +3,8 @@
 
 <div class="top-hero-wrapper text-left">
   <div class="container top-hero-container">
-    <h1 class="h1-text">ポートフォリオ用テスト</h1>
-    <h2 class="h2-text">これがh2になるよ</h2>
+    <h1 class="h1-text">旅行ガイド</h1>
+    <h2 class="h2-text">好きな場所を選択できる</h2>
     <div class="row">
       
     </div>
@@ -178,10 +178,13 @@
 </div>
 
 
+
+
 <div class="under-hero-wrapper text-center">
    <div class="container under-hero-container">
      <p class="under-text">Pictgram</p>
-     <div class="col-md-offset-8 pictgram">
+     <div class="pictgram">
+     <p class="under-content-text">ここからSNSで投稿しよう！</p>
      <%= link_to image_tag('icons/pict.png'),'https://serene-refuge-44069.herokuapp.com/' %>
      </div>
    </div>
