--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
      <div class="row">
      <div class="col-md-offset-4 col-md-4 profil-title text-left">
       <p class= "user-title">プロフィール
-      <%= link_to "ユーザー情報編集", edit_user_path(current_user.id) , {class: "toroku-text" } %>
+      <%= link_to "ユーザー情報編集", edit_user_path(current_user) , {class: "toroku-text" } %>
       </p>
       
       <div class= "user-image-form">
